--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -7,7 +7,7 @@
     <title>Content Manager</title>
 
     <link href='https://fonts.googleapis.com/css?family=Arya|Lato:400,300,700|Emblema+One' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
     <!-- Include the stylesheets from your site here -->
 
     <link rel="stylesheet" href="//cms.netlify.com/assets/cms.css" />
