--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -17,10 +17,23 @@
   </head>
   <body>
     <script type="text/x-handlebars" data-template-name='cms/preview/podcast'>
-      <h1>{{cms-preview field='title'}}</h1>
-      <div class="">{{cms-preview field='slug'}}</div>
-      <div class="">{{cms-preview field='author'}}</div>
-      <div class="">{{cms-preview field='episode'}}</div>
+      <h3>{{cms-preview field='title'}}</h3>
+      <div class="">The URL for this post is: https://tpvsports.net/{{cms-preview field='slug'}}<br><small>Recommended URL Slug is: <span style="background-color: rgba(212, 212, 212, 1); padding: 0 2px;">year-month-date-show-title</span></small></div>
+      <div class=""> Episode # {{cms-preview field='episode'}} is hosted by: {{cms-preview field='author'}}</div>
+      <div class="">
+        <p>Short description:</p>
+        {{cms-preview field='description'}}
+      </div>
+      <div>
+        <iframe 
+          width="100%" 
+          height="166" 
+          scrolling="no" 
+          frameborder="no" 
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{cms-preview field='soundcloud'}}&amp;color=ff9900&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"
+          >
+        </iframe>
+      </div>
       <div class="">{{cms-preview field='description'}}</div>
     </script>
 
