changed the admin area title

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Content Manager</title>
+    <title>Dashboard</title>
 
     <link href='https://fonts.googleapis.com/css?family=Arya|Lato:400,300,700|Emblema+One' rel='stylesheet' type='text/css'>
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
