--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -17,15 +17,13 @@
   </head>
   <body>
     <script type="text/x-handlebars" data-template-name='cms/preview/podcast'>
-      <h3>{{cms-preview field='title'}}</h3>
-      <div class="">The URL for this post is: https://tpvsports.net/{{cms-preview field='slug'}}<br><small>Recommended URL Slug is: <span style="background-color: rgba(212, 212, 212, 0.5); padding: 0 2px;">year-month-date-show-title</span></small></div>
+      <h3 style="margin-bottom: 8px;">{{cms-preview field='title'}}</h3>
+      <div class="">URL: https://tpvsports.net/{{cms-preview field='slug'}}<br><small>Recommended URL Slug is: <span style="background-color: rgba(212, 212, 212, 0.2); padding: 0 2px;">show-title</span></small></div>
       <div class=""> Episode # {{cms-preview field='episode'}} is hosted by: {{cms-preview field='author'}}</div>
       <div class="">
         <p>Short description:</p>
         {{cms-preview field='description'}}
       </div>
-     
-      <div class="">{{cms-preview field='description'}}</div>
     </script>
 
     <script src="//cms.netlify.com/assets/vendor.js"></script>
