--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -20,6 +20,20 @@
       <h3 style="margin-bottom: 8px;">{{cms-preview field='title'}}</h3>
       <div class="">URL: https://tpvsports.net/{{cms-preview field='slug'}}<br><small>Recommended URL Slug is: <span style="background-color: rgba(212, 212, 212, 0.2); padding: 0 2px;">show-title</span></small></div>
       <div class=""> Episode # {{cms-preview field='episode'}} is hosted by: {{cms-preview field='author'}}</div>
+      <div class="">
+        <p>Short description:</p>
+        {{cms-preview field='description'}}
+      </div>
+      <div>
+        <iframe 
+          width="100%" 
+          height="166" 
+          scrolling="no" 
+          frameborder="no" 
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ entry.soundcloud }}&amp;color=ff9900&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"
+          >
+        </iframe>
+      </div>
     </script>
 
     <script src="//cms.netlify.com/assets/vendor.js"></script>
