--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -16,16 +16,23 @@
       .inline {
         display: inline-block !important;
       }
+      .off-black {
+        color: rgba(131, 129, 129, 1);
+      }
     </style>
     <base href="/admin/">
   </head>
   <body>
     <script type="text/x-handlebars" data-template-name='cms/preview/podcast'>
-      <h3 style="margin-bottom: 8px;">{{cms-preview field='title'}}</h3>
-      <div class="">URL: https://tpvsports.net/{{cms-preview field='slug'}}<br><small>Recommended URL Slug is: <span style="background-color: rgba(212, 212, 212, 0.2); padding: 0 2px;">show-title</span></small></div>
+      <h3 style="margin-bottom: 0;">{{cms-preview field='title'}}</h3>
+      <div class="">
+        URL: https://tpvsports.net/<span class="inline">{{cms-preview field='slug'}}</span><br>
+        <small class="off-black">Recommended URL Slug is: <span style="background-color: rgba(212, 212, 212, 0.2); padding: 0 2px;">show-title</span>
+        </small>
+      </div>
       <div class=""> Episode # <span class="inline">{{cms-preview field='episode'}}</span> is hosted by: <span class="inline">{{cms-preview field='author'}}</span></div>
       <div class="">
-        <p>Short description:</p>
+        <p style="margin-bottom: 0;">Short description:</p>
         {{cms-preview field='description'}}
       </div>
       <div>
