--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -24,8 +24,9 @@
   </head>
   <body>
     <script type="text/x-handlebars" data-template-name='cms/preview/podcast'>
-      <h3 style="margin-bottom: 0;">{{cms-preview field='title'}}</h3>
-      <div class="">
+      <h3>Content Preview</h3>
+      <h4 style="margin-bottom: 0;">{{cms-preview field='title'}}</h4>
+      <div class="" style="margin-bottom: 15px;">
         URL: https://tpvsports.net/<span class="inline">{{cms-preview field='slug'}}</span><br>
         <small class="off-black">Recommended URL Slug is: <span style="background-color: rgba(212, 212, 212, 0.2); padding: 0 2px;">show-title</span>
         </small>
@@ -33,10 +34,10 @@
       <div class=""> Episode # <span class="inline">{{cms-preview field='episode'}}</span> is hosted by: <span class="inline">{{cms-preview field='author'}}</span></div>
       <div class="">
         <p style="margin-bottom: 0;">Short description:</p>
-        {{cms-preview field='description'}}
+        <p style="margin-top: 3px;">{{cms-preview field='description'}}</p>
       </div>
       <div>
-        Episode preview: 
+        <p style="margin-bottom: 5px;">Episode preview:</p>
         <iframe 
           width="100%" 
           height="166" 
