--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -34,7 +34,7 @@
       <div class=""> Episode # <span class="inline">{{cms-preview field='episode'}}</span> is hosted by: <span class="inline">{{cms-preview field='author'}}</span></div>
       <div class="">
         <p style="margin-bottom: 0;">Short description:</p>
-        <p style="margin-top: 3px;">{{cms-preview field='description'}}</p>
+        <p style="position:relative; top: -8px;">{{cms-preview field='description'}}</p>
       </div>
       <div>
         <p style="margin-bottom: 2px;">Episode preview:</p>
