--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -33,8 +33,8 @@
       </div>
       <div class=""> Episode # <span class="inline">{{cms-preview field='episode'}}</span> is hosted by: <span class="inline">{{cms-preview field='author'}}</span></div>
       <div class="">
-        <p style="margin-bottom: 0;">Short description:</p>
-        <p style="position:relative; top: -8px;">{{cms-preview field='description'}}</p>
+        <p style="font-weight: bold; margin-bottom: 0;">Short description:</p>
+        <p style="position: relative; top: -12px; margin-top: 0;">{{cms-preview field='description'}}</p>
       </div>
       <div>
         <p style="margin-bottom: 2px;">Episode preview:</p>
