update the static pages

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -36,6 +36,10 @@
         <p style="font-weight: bold; margin-bottom: 0;">Short description:</p>
         <p style="position: relative; top: -12px; margin-top: 0;">{{cms-preview field='description'}}</p>
       </div>
+      <div class="">
+        <p style="font-weight: bold; margin-bottom: 0;">Body:</p>
+        <p style="position: relative; top: -12px; margin-top: 0;">{{cms-preview field='body'}}</p>
+      </div>
       <div>
         <p style="margin-bottom: 2px;">Episode preview:</p>
         <iframe 
