updated environment variable

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -20,7 +20,9 @@
         color: rgba(131, 129, 129, 1);
       }
     </style>
-    <script>window.CMS_ENV = "{{ site.cms }}";</script>
+    <script>
+      window.CMS_ENV = "{{ site.cms }}";
+    </script>
     <base href="/admin/">
   </head>
   <body>
