still trying to debug tags

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -28,6 +28,7 @@
     </script>
 
     <script type="text/x-handlebars" data-template-name='cms/widgets/tags-preview'>
+      <h3>Tags: </h3>
       {{#each tag in widget.value}}
         <span class="tag">{{tag}}</span>
       {{/each}}
