--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -53,17 +53,18 @@
       </div>
       <div>
         <p style="margin-bottom: 2px;">Episode number:</p>
-        {{ entry.soundcloud }}
-        <!-- <iframe 
+        
+        <iframe 
           width="100%" 
           height="166" 
           scrolling="no" 
           frameborder="no" 
-          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/&amp;color=ff9900&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ entry.soundcloud }}&amp;color=ff9900&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false"
           >
-        </iframe> -->
+        </iframe>
       </div>
     </script>
+    
     <script src="//cms.netlify.com/assets/vendor.js"></script>
     <script src="//cms.netlify.com/assets/cms.js"></script>
 
